--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/short-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/grascope.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=2.0" />
     <link rel="stylesheet" href="https://cdn.stylexui.com/css/xui.min.css">
     <!-- Primary Meta Tags -->
-    <title>Crednow - Empowering Your Financial Future</title>
-    <meta name="title" content="Crednow - Empowering Your Financial Future" />
-    <meta name="description" content="At Crednow, we leverage cutting-edge technology to provide innovative financial solutions tailored to meet your unique needs." />
+    <title>Grascope Solutions CO</title>
+    <meta name="title" content="Grascope Solutions CO" />
+    <meta name="description" content="We build companies, improve ideas, and create solutions that empower businesses and individuals to thrive in a competitive world." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://crednow.co" />
-    <meta property="og:title" content="Crednow - Empowering Your Financial Future" />
-    <meta property="og:description" content="At Crednow, we leverage cutting-edge technology to provide innovative financial solutions tailored to meet your unique needs." />
+    <meta property="og:url" content="https://www.grascope.com/" />
+    <meta property="og:title" content="Grascope Solutions CO" />
+    <meta property="og:description" content="We build companies, improve ideas, and create solutions that empower businesses and individuals to thrive in a competitive world." />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://crednow.co" />
-    <meta property="twitter:title" content="Crednow - Empowering Your Financial Future" />
-    <meta property="twitter:description" content="At Crednow, we leverage cutting-edge technology to provide innovative financial solutions tailored to meet your unique needs." />
+    <meta property="twitter:url" content="https://www.grascope.com/" />
+    <meta property="twitter:title" content="Grascope Solutions CO" />
+    <meta property="twitter:description" content="We build companies, improve ideas, and create solutions that empower businesses and individuals to thrive in a competitive world." />
 
     <!-- Meta Tags Generated with Meta Tags.io -->
-    <meta content="crednow crednow.co financial finance technology cutting-edge solutions" name="keywords" />
+    <meta content="grascope grascope.com companies" name="keywords" />
   </head>
   <body class="xui-aos">
     <div id="root"></div>
